--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^12.7.0",
     "minimatch": "^10.1.1",
+    "motion": "^12.24.7",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
