--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@previewjs/config-helper-nextjs": "^1.0.29",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^12.7.0",
     "minimatch": "^10.1.1",
     "motion": "^12.24.7",
